[workspace]
resolver = "2"

members = [
    "client",
    "server",
    "store"
]

[workspace.metadata.tarpaulin]
all-features = true
workspace = true
exclude-files = [
    "server/src/adapters/redpanda.rs", # Heavy Kafka dependency
    "client/src/main.rs",             # Heavy Bevy UI dependency
]

[workspace.dependencies]
serde = { version = "^1.0.228", features = ["derive"] }
bincode-next = { version = "2.1.0", features = ["serde", "derive", "alloc"] }
anyhow = { version = "^1.0.102" }
thiserror = { version = "^2.0.18" }
tokio = { version = "^1.51.1", features = ["full"] }
tracing = { version = "^0.1.44" }
tracing-subscriber = { version = "^0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "^1.23.0", features = ["v4", "serde"] }
renet = { version = "^2.0.0" }
renet_netcode = { version = "^2.0.0" }
crossbeam-channel = { version = "^0.5.15" }
chrono = { version = "^0.4.44", features = ["serde"] }
bevy = { version = "^0.18.1" }
store = { path = "store" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
needless_pass_by_value = "deny"
unwrap_used = "deny"
expect_used = "deny"
cognitive_complexity = "warn"
type_complexity = "warn"
too_many_arguments = "warn"
module_inception = "warn"
module_name_repetitions = "allow"

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "deny"
unsafe_code = "deny"
unused_qualifications = "warn"
variant_size_differences = "warn"
