[package]
name = "client"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
bincode-next = { workspace = true }
anyhow = { workspace = true }
renet = { workspace = true }
renet_netcode = { workspace = true }
store = { workspace = true }
bevy = { version = "^0.18.1", default-features = true }
bevy_renet = { version = "^4.0.1" }
bevy_ecs = { version = "^0.18.1" }
