[package]
name = "server"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
bincode-next = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
store = { workspace = true }
renet = { version = "^2.0.0" }
renet_netcode = { version = "^2.0.0" }
crossbeam-channel = { version = "^0.5.15" }
rdkafka = { version = "^0.39.0", features = ["cmake-build", "ssl"] }
bytes = { version = "^1.11.1" }
