[package]
name = "server"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
bincode-next = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
store = { workspace = true }
renet = { workspace = true }
renet_netcode = { workspace = true }
crossbeam-channel = { version = "^0.5.15" }
rdkafka = { version = "^0.39.0", features = ["cmake-build", "ssl"] }
