[package]
name = "store"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { workspace = true }
bincode-next = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { version = "^1.23.0", features = ["v4", "serde"] }
chrono = { version = "^0.4.44", features = ["serde"] }
